--- a/foodieHub/src/main/resources/application.properties
+++ b/foodieHub/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/foodiehub
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 jwt.secret.key=${JWT_KEY}
 jwt.token.expiration=${JWT_EXPIRATION}
