101 -> Authservice signup logic changed

--- a/foodieHub/src/main/resources/application.properties
+++ b/foodieHub/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 jwt.secret.key=${JWT_KEY}
 jwt.token.expiration=${JWT_EXPIRATION}
+refresh.token.expiration=${REFRESH_TOKEN_EXPIRATION}
